--- a/css/spooky.css
+++ b/css/spooky.css
@@ -2,3 +2,24 @@
 	font-family: nsmbu-font;
 	src: url("../font/nsmbu-font.ttf");
 }
+
+@font-face {
+	font-family: seurat-pro;
+	src: url("../font/seurat-pro.otf");
+}
+
+@keyframes checker {
+	0% {
+	  background-position: 0 0;
+	}
+	100% {
+	  background-position: 136px 136px;
+	}
+}
+
+.diamonds {
+	background-image: url("../spooky/img/diamonds.svg");
+	top: 0;
+	left: 0;
+	width: 100%;
+	animation: checker 5s linear infinite;
