--- a/css/spooky.css
+++ b/css/spooky.css
@@ -5,7 +5,7 @@
 
 @font-face {
 	font-family: seurat-pro;
-	src: url("../font/seurat-pro.otf");
+	src: url("../spooky/font/seurat-pro.otf");
 }
 
 @keyframes checker {
