--- a/css/spooky.css
+++ b/css/spooky.css
@@ -8,6 +8,24 @@
 	src: url("../spooky/font/seurat-pro.otf");
 }
 
+.acolor {
+	color: #ff00ff;
+}
+
+.align {
+	font-family: seurat_pro;
+	text-align: center;
+	position: absolute;
+	background-image: url("../spooky/img/none.svg");
+	width: 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	left: 0;
+	margin-top: 30px;
+	min-width: 640px;
+}
+
 @keyframes checker {
 	0% {
 	  background-position: 0 0;
@@ -23,3 +41,4 @@
 	left: 0;
 	width: 100%;
 	animation: checker 5s linear infinite;
+}
