--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,8 @@
 	font-family: nsmbu-font;
 	src: url("../font/nsmbu-font.ttf");
 }
+
+@font-face {
+	font-family: comic;
+	src: url("../font/comic.ttf");
+}
