--- a/css/404notfound.css
+++ b/css/404notfound.css
@@ -8,6 +8,8 @@
 	src: url("../font/comic.ttf");
 }
 
-#grad {
-  background-image: linear-gradient(#ff0000, #1c0a00);
+#grad2 {
+  height: 100px;
+  background-color: white; /* For browsers that do not support gradients */
+  background-image: linear-gradient(90deg, #ff0000, #1c0a00);
 }
