--- a/css/404notfound.css
+++ b/css/404notfound.css
@@ -4,12 +4,6 @@
 }
 
 @font-face {
-	font-family: comic;
-	src: url("../font/comic.ttf");
-}
-
-#grad2 {
-  height: 1080px;
-  background-color: white; /* For browsers that do not support gradients */
-  background-image: linear-gradient(90deg, #ff0000, #1c0a00);
+	font-family: seurat-pro;
+	src: url("../font/seurat-pro.ttf");
 }
