--- a/css/404notfound.css
+++ b/css/404notfound.css
@@ -4,6 +4,6 @@
 }
 
 @font-face {
-	font-family: seurat-pro;
-	src: url("../font/seurat-pro.otf");
+	font-family: terminal;
+	src: url("../font/dosapp.fon");
 }
