ok now this is useless tbh

--- a/css/404notfound.css
+++ b/css/404notfound.css
@@ -1,9 +1,4 @@
 @font-face {
-	font-family: nsmbu-font;
-	src: url("../font/nsmbu-font.ttf");
-}
-
-@font-face {
 	font-family: terminal;
-	src: url("../font/dosapp.fon");
+	src: url("../font/dosapp.ttf");
 }
