--- a/css/spooky.css
+++ b/css/spooky.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 body {
-  background-image: url("../spooky/img/4x4-Diamonds.png");
+  background-image: url("4x4-Diamonds.png");
 }
 
 .align {
