--- a/css/spooky.css
+++ b/css/spooky.css
@@ -20,7 +20,7 @@ body {
 	font-family: seurat_pro;
 	text-align: center;
 	position: absolute;
-	background-image: url("../spooky/img/none.svg");
+	background-image: url("../spooky/img/diamonds.svg");
 	width: 200%;
 	background-position: center;
 	background-repeat: no-repeat;
