--- a/css/spooky.css
+++ b/css/spooky.css
@@ -13,19 +13,5 @@ h1 {
 }
 
 body {
-  background-image: url("4x4-Diamonds.png");
-}
-
-.align {
-	font-family: seurat_pro;
-	text-align: center;
-	position: absolute;
-	background-image: url("../spooky/img/diamonds.svg");
-	width: 200%;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	left: 0;
-	margin-top: 30px;
-	min-width: 40px;
+  background-image: url("../spooky/img/4x4-Diamonds.png");
 }
