--- a/css/spooky.css
+++ b/css/spooky.css
@@ -1,17 +1,82 @@
-@font-face {
-	font-family: nsmbu-font;
-	src: url("../font/nsmbu-font.ttf");
-}
-
-@font-face {
-	font-family: seurat-pro;
-	src: url("../spooky/font/seurat-pro.otf");
-}
-
-h1 {
-  font-size: 40px;
-}
 
 body {
-  background-image: url("../spooky/img/4x4-Diamonds.png");
+	background-image: url('../spooky/img/4x4-Diamonds.png');
+	background-size: 25%;
+}
+a:link, a:visited {
+	background-color: #512482;
+	color: black;
+	border: 2px solid #7346A5;
+	padding: 10px 20px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	width: 200px;
+}
+a:hover, a:active {
+	background-color: #63369b;
+	color: white;
+}
+div.padding {
+	padding: 10px;
+}
+div.titlebar {
+	width: 100%;
+	height: 40px;
+	position:relative;
+	left:-22px;
+	top:-8px;
+	padding: 15px;
+	background-image: linear-gradient(#3C1851ff, #47207Dcc);
+	box-shadow: 10px 10px 5px #00002275;
+	font-family: seurat-pro;
+	font-size: 32px;
+	color: white;
+	text-shadow: 14px 8px #000000;
+	text-align: center;
+}
+div.spookyIsDead {
+	text-align: center;
+	margin: auto;
+	width: 800px;
+	height: 535px;
+	background-image: linear-gradient(#3C1851cc, #4D296277, #3C1851cc);
+	box-shadow: 10px 10px 5px #00002275;
+	font-family: seurat-pro;
+	color: silver;
+}
+div.footer {
+	font-family:seurat-pro;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 100px;
+	position: fixed;
+	left:-24px;
+	padding: 12px;
+	background-image: linear-gradient(#47207Ddd, #3C1851);
+	width: 100%;
+	bottom: 0px;
+	box-shadow: 10px -10px 5px #00002275;
+}
+@font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); }
+@font-face { font-family: seurat-pro; src: url('seurat-pro.otf'); }
+h1 {
+	font-family: nsmbu-font;
+	text-shadow: 14px 8px #00000055;
+}
+h2 {
+	font-family: seurat-pro;
+	position:relative;
+	top:-40px;
+}
+p {
+	font-family: seurat-pro;
+	position:relative;
+	top:-20px;
+}
+a {
+	font-family: seurat-pro;
+	position:relative;
+	top:-10px;
 }
