--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,107 @@
-@font-face {
-	font-family: nsmbu-font;
-	src: url("../font/nsmbu-font.ttf");
+@font-face { font-family: corbel; src: url('../font/CORBEL.TTF'); }
+@font-face { font-family: ebrima; src: url('../font/ebrima.ttf'); } 
+h1 {
+    font-family: corbel;
 }
-
-@font-face {
-	font-family: comic;
-	src: url("../font/comic.ttf");
+p {
+    font-family: ebrima;
+}
+h2 {
+    font-family: corbel;
+}
+a.nsmbwii {
+    font-family: nsmbu-font;
+}
+body {
+    text-align: center;
+    background-image: linear-gradient(red, #ff00ff);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+div.inTheWorksNotice {
+    width: 500px;
+    height: 24px;
+    text-align: center;
+    border: 5px solid red;
+    background-color: #de0000;
+    font-family: ebrima;
+}
+div.titleAndGrammarReassurance {
+    margin: auto;
+    width: 900px;
+    height: 100px;
+    background-color: #11113375;
+    box-shadow: 10px 10px 5px #00002250;
+}
+div.newStuffSection {
+    text-align: center;
+    margin: auto;
+    width: 800px;
+    height: 100px;
+    background-color: #55111175;
+    box-shadow: 10px 10px 5px #44000050;
+    font-family: ebrima;
+}
+div.aboutMe {
+    text-align: center;
+    margin: auto;
+    width: 800px;
+    height: 180px;
+    background-color: #11113375;
+    box-shadow: 10px 10px 5px #00002250;
+    font-family: ebrima;
+}
+div.aboutWebsite {
+    text-align: center;
+    margin: auto;
+    width: 800px;
+    height: 290px;
+    background-color: #11113375;
+    box-shadow: 10px 10px 5px #00002250;
+    font-family: ebrima;
+}
+div.sectionHeader {
+    text-align: center;
+    margin: auto;
+    width: 900px;
+    height: 50px;
+    background-color: #11113375;
+    box-shadow: 10px 10px 5px #00002250;
+    font-family: ebrima;
+}
+div.projectsModding {
+    text-align: center;
+    margin: auto;
+    width: 800px;
+    height: 100px;
+    background-color: #11113375;
+    box-shadow: 10px 10px 5px #00002250;
+    font-family: ebrima;
+}
+div.projectsWebsite {
+    text-align: center;
+    margin: auto;
+    width: 800px;
+    height: 120px;
+    background-color: #11113375;
+    box-shadow: 10px 10px 5px #00002250;
+    font-family: ebrima;
+}
+div.junkDrawer {
+    text-align: center;
+    margin: auto;
+    width: 800px;
+    height: 180px;
+    background-color: #11113375;
+    box-shadow: 10px 10px 5px #00002250;
+    font-family: ebrima;
+}
+div.footer {
+    text-align: center;
+    margin: auto;
+    width: 900px;
+    height: 50px;
+    background-color: #11113375;
+    box-shadow: 10px 10px 5px #00002250;
+    font-family: ebrima;
 }
