--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,20 @@
 @font-face { font-family: corbel; src: url('../font/CORBEL.TTF'); }
 @font-face { font-family: ebrima; src: url('../font/ebrima.ttf'); } 
+a.titlebarLinks:link, a.titlebarLinks:visited {
+	background-color: #565b61;
+	color: black;
+	border: 2px solid #9f9ba3;
+	padding: 10px 0px;
+	text-align: center;
+	text-decoration: none;
+	/*text-shadow: 7px 4px #00000055;*/
+	display: inline-block;
+	width: 25px;
+}
+a.titlebarLinks:hover, a.titlebarLinks:active {
+	background-color: #0066ff;
+	color: white;
+}
 h1 {
     font-family: corbel;
 }
@@ -18,6 +33,9 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
 }
+div.padding {
+    padding: 20px;
+}
 div.inTheWorksNotice {
     width: 500px;
     height: 24px;
@@ -26,12 +44,39 @@ div.inTheWorksNotice {
     background-color: #de0000;
     font-family: ebrima;
 }
-div.titleAndGrammarReassurance {
+div.titlebar {
     margin: auto;
-    width: 900px;
+    width: 101%;
     height: 100px;
+    /*padding: -50px;*/
+    position:relative;
+	left:-11px;
+	top:-21px;
     background-color: #11113375;
-    box-shadow: 10px 10px 5px #00002250;
+    box-shadow: 0px 10px 5px #00002250;
+}
+div.titlebarText{
+    position:relative;
+	right:-11px;
+	bottom: -5px;
+}
+div.titlebarNav {
+    position:relative;
+	right:-22px;
+}
+p.titlebarNavBlog {
+    font-family: ebrima;
+    text-align: center;
+    display: inline;
+    /*cursor: not-allowed;*/
+    color: #787878;
+}
+p.titlebarNavLinkTwo {
+    font-family: ebrima;
+    text-align: center;
+    display: inline;
+    /*cursor: not-allowed;*/
+    color: #787878;
 }
 div.newStuffSection {
     text-align: center;
@@ -44,7 +89,9 @@ div.newStuffSection {
 }
 div.aboutMe {
     text-align: center;
-    margin: auto;
+    /*margin: auto;*/
+    position: relative;
+    left: 50px;
     width: 800px;
     height: 180px;
     background-color: #11113375;
