--- a/the_eel/main.css
+++ b/the_eel/main.css
@@ -3,12 +3,12 @@
   src: url('./font/nsmbu-font.ttf');
 }
 
-.body {
+body {
   background-color: black;
   text-align: center;
 }
 
-.h1 {
+h1 {
   color: white;
   font-family: nsmbu;
 }
