Add note about site being outdated, also fix BG
- The background color is less hideous now.
- Removed some commented out stuff from the Spooky Adventure page.

--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ a.nsmbwii {
 }
 body {
     text-align: center;
-    background-image: linear-gradient(red, #ff00ff);
+    background-image: linear-gradient(#cc0000, #cc00cc);
     background-size: cover;
     background-repeat: no-repeat;
 }
